# api_bot

./: .envi  .gitignore  DockerfileFlask  docker-compose.yaml  docker-compose.yml  migrator.py  pyproject.toml  run_bot.py  temp  wsgi.py
common/: db_api.py  enums.py  settings.json  settings.py
common/models/: __init__.py  base.py  generations.py  payments.py  reports.py  user.py
common/services/: neiro_api.py  robokassa.py
data/: nginx.conf  settings.json
data/templates/: 404.html  offer.html  payment_success.html  policy.html
flask_app/: __init__.py  admin.py  app.py  extensions.py  forms.py  wsgi.py
flask_app/admin/: admin.py  views.py
flask_app/adminlte/: views.py
flask_app/auth/: views.py
flask_app/commands/: create_superuser.py
flask_app/main_app/: views.py
flask_app/payments_app/: views.py
flask_app/templates/: master-extended.html
migrations/: alembic.ini
migrations/versions/: 2024_03_11_17_55-3e0e04c6f7ca_payments_models.py  2024_03_20_15_51-868bfc2f1e39_edit_user.py  2024_03_21_12_03-c59d042964be_edit_fk.py  2024_03_21_12_33-c46f4963e867_edit_strings.py  2024_03_21_12_36-e6b5fad7458b_edit_strings.py  2024_03_21_12_38-db9dc532365b_edit_strings.py  2024_03_21_13_31-07cbf4e099f7_add_first_payment_to_user.py  2024_03_21_17_14-adca8bde0c62_add_role_model.py  2024_03_21_18_55-77e1e5f1856c_edit_role_model.py  2024_03_26_13_18-a43c99bd3c53_del_name_from_sessions.py  2024_03_26_15_13-0d4cf15f0637_change_context_logic.py  2024_03_26_15_34-23cd79afb9de_change_context_logic.py  2024_03_26_15_46-0a2d8e62e4a5_change_context_logic.py  (+21 more)
(+56 files in other folders)
